adding a list try to Understanding the pushing method

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,13 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt cum, aspernatur eos beatae rem odio ipsum illo similique ratione molestias!</p>
     </div>
 
-    
+    <h3>how to push incremental code in git hub</h3>
+    <ol>
+        <h6>We are need 3 step to do this work</h6>
+        <li>adding all file : git add .</li>
+        <li>Write a git commit valid name : git commit -M"massage"</li>
+        <li>pus the server : git push</li>
+        <p>now its is complete</p>
+    </ol>
 </body>
 </html>
